app/assets/stylesheets/components/_collab-card.scss
.page-info {
  margin: auto;
  padding: 16px;
  width: 600px;
  text-align: justify;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;

  .btn-outline-primary {
    font-family: "Novar";
    width: 30%;
    margin-bottom: 0;
  }
}

.page-info-user-collab h2 {
  text-align: center;
  margin-bottom: 0;
}

.container-collab-cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-column-gap: 10px;
  grid-row-gap: 10px;

  img {
    width: 300px;
    max-height: 400px;
  }

  .collab-card {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    height: auto;
    width: 300px;
  }

  .collab-card-infos {
    position: absolute;
    flex-direction: column;
    text-align: left;
    position: relative;
    margin-bottom: 20px;

    h3 {
      margin-top: 8px;
    }

    h3 a {
      text-decoration: none;
      color: black;
    }

    h4 {
      text-align: justify;
    }

    .btn-outline-primary {
      font-family: "Novar";
      width: 65%;
      margin-top: 8px;
    }
  }
}


.container-collab-image {

  img {
    display: block;
    margin: auto;
    width: 400px;
    max-height: 533px;
    pointer-events: none;
  }

  h3, h4 {
    text-align: center;
  }
}

.collab-card-members-todo {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;

  .collab-card-info {
    padding: 6px 12px;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
    width: 400px;

    .collab-edit-delete-btn {
      display: flex;
      justify-content: space-between;
      margin-top: 8px;


      .btn-outline-danger {
        width: 40%;
        padding: 4px 10px;
        margin-bottom: 0;
      }

      .btn-outline-primary {
        width: 40%;
        padding: 4px 10px;
        margin-bottom: 0;
      }
    }

    .collab-members {
      display: flex;
      justify-content: space-between;
      flex-direction: row;
      align-items: center;
      margin-bottom: 16px;

      .btn-outline-warning {
        width: 20%;
        margin-bottom: 0;
        padding: 4px 10px;
      }
    }
  }
}

.collab-accepted-users {
  display: flex;
  flex-direction: column;
  align-items: space-around;

  .container-btn-collab {
    margin-top: 30px;
    padding: 4px 10px;
  }
}


.collab-divider {
  border-color: black;
  margin: 0 75px;
}

.container {
  display: flex;
  flex-direction: column;

  .collab-active-and-requests {
    display: flex;
    justify-content: center;

    h2 {
      text-align: center;
      padding: 16px;
      width: 300px;
      border-radius: 5px;
      box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
    }
  }

  .collab-list-infos {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;

    h3 {
      margin-bottom: 0;
      width: 250px;

      a {
        color: inherit;
        text-decoration: none;
      }
    }

    h4 {
      margin-bottom: 0;
      width: 300px;

      a {
        color: inherit;
        text-decoration: none;
      }
    }

    p {
      margin-bottom: 0;
      width: 250px;

      a {
        color: inherit;
        text-decoration: none;
      }
    }

    .founder {
      width: 200px;
    }

    .request-not-accepted-yet {
      width: 300px;
      text-align: center;
    }

    .btn-outline-primary {
      margin-bottom: 0;
    }
  }

  .collab-request-infos {
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
    align-items: center;

    h3 {
      margin-bottom: 0;
      width: 200px;

      a {
        color: inherit;
        text-decoration: none;
      }
    }

    h4 {
      margin-bottom: 0;
      width: 300px;

      a {
        color: inherit;
        text-decoration: none;
      }
    }

    p {
      margin-bottom: 0;

      a {
        color: inherit;
        text-decoration: none;
      }
    }

    .founder {
      width: 200px;
    }
  }
}


.collab-pending-users {

  h2 {
    text-align: center;
    margin-bottom: 0;
  }

  .btn-collab-card {
    width: 15%;
    margin: auto;
  }
}

